# agentic-analytics-copilot

./: PROJECT_TRACKER.md  README.md
backend/: .env.example  pyproject.toml
backend/agentic_analytics_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: auth.py  routes.py
backend/app/core/: config.py
backend/app/db/: postgres_client.py  schema_setup.py
backend/app/schemas/: ask.py  query_execution.py  responses.py  semantic.py  sql_validation.py
backend/app/services/: intent_router.py  query_execution_service.py  semantic_service.py  sql_validator.py
backend/sql/: 001_create_raw_olist_tables.sql  002_create_mart_olist_tables.sql  003_seed_semantic_catalog.sql
scripts/: create_mart_olist.sh  load_olist_raw.sh  seed_semantic_catalog.sh
