[project]
name = "agentic-analytics-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for an agentic analytics copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.0"
]

[tool.uvicorn]
factory = false
